# eiye-db

./: .gitignore  CLAUDE.md  GOALS.md  README.md  TODO.md
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/eiye_db/: __init__.py  api.py  audit.py  config.py  db.py  main.py  mcp_server.py  metrics.py  models.py  pii.py  registry.py  security.py  service.py
backend/eiye_db/connectors/: __init__.py  base.py  filesystem.py  postgres.py  rest.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_connectors_fs.py  test_connectors_pg.py  test_connectors_rest.py  test_health.py  test_mcp.py  test_metrics.py  test_models.py  test_pii.py  test_query_api.py  test_registry_api.py
docs/: ONBOARDING.md
examples/demo_data/: customers.csv  orders.csv
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: DataSourceForm.tsx  DataSourcePanel.tsx
integrations/openplanter/: README.md  eiye-bridge.patch
scripts/: mcp_dogfood.sh  quickstart.py  quickstart.sh
