[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eiye-db"
version = "0.1.0"
description = "Semantic Surface for AI-Ready Organizations"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "httpx>=0.27.2",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "ruff>=0.6.0"]

[project.scripts]
eiye-db = "eiye_db.main:main"
eiye-db-mcp = "eiye_db.mcp_server:main"

[tool.setuptools.packages.find]
include = ["eiye_db*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120
